# Transplier-program

./: .gitignore  BUILD_SUMMARY.md  Boom&CrashStraExp.md  Boom&Crash_test.py  Boom&Crashstra.py  CODEBASE_EXPLORATION.md  COMMANDS.md  CONTRIBUTING.md  EOVIE.py  EOVIE_CASE_STUDY.md  INDEX.md  README.md  README_NEW.md  README_OPTIMIZATION.md  WELCOME.md  analyze_sweep_results.py  backtest.py  backtest_trades_R_100_FourierStrategy.csv  clean_csv_data.py  config.yaml  eovie_ir.json  fourier.txt  fourier_enhanced.py  fourier_v75_optimized.txt  ir.json  pyproject.toml  quick_backtest.py  quick_optimization.py  requirements.txt  requirements_clean.txt  run_deriv_bot.py  run_full_optimization.py  run_monthly_htf.sh  run_optimization_sweep.py  sweep_results_R100_1h.csv  test_risk_model.py
DerivXMLStrategies/: EOVIE_deriv.xml
data/: R_100_1h_1y.csv  R_100_candles_3600s_14d.csv  R_100_candles_3600s_30d.csv  R_100_candles_3600s_365d.csv  R_100_candles_3600s_60d.csv  R_100_candles_3600s_90d.csv  R_100_candles_60s_14d.csv  R_50_candles_3600s_14d.csv  R_50_candles_3600s_90d.csv  R_75_1h_1y.csv  R_75_candles_3600s_14d.csv  R_75_candles_3600s_60d.csv  R_75_candles_3600s_90d.csv
examples/: deriv_bot_examples.py  simple_sma_crossover.pine  simple_sma_crossover.py
results/: monthly_htf.csv  monthly_htf_metrics.csv  monthly_metrics.csv
scripts/: download_deriv_candles.py
src/: __init__.py  config.py  converter.py  transpiler.py
tests/: __init__.py  test_generators.py  test_ir_schema.py  test_parsers.py  test_roundtrip_equivalence.py  test_transpiler.py
tools/: param_optimizer.py  (+4 more)
(+46 files in other folders)
